--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,17 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 body {
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 header  {
     background-color: #25a25a;
 }
 header nav {
+    text-align: center;
     padding: 10px;
 }
 nav a {
@@ -21,8 +23,8 @@ nav a {
     padding: 5px;
 }
 nav a:hover {
+    transition-duration: 1s;
     border-bottom: 2px solid white;
-    font-weight: bold;
 }
 header h1 {
     text-align: center;
@@ -69,6 +71,7 @@ aside {
     border-radius: 10px;
 }
 .tabela {
+    margin: auto;
     overflow-x: auto;
 }
 table {
@@ -80,7 +83,6 @@ th, td {
     padding: 10px;
     text-align: center;
     background-color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 #resultado {
     text-align: center;
